--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </div>
         </div>
     </div>
-    <script type="text/javascript" src="camo.js"></script>
+    <script type="text/javascript" src="colors.js"></script>
 </body>
 
 </html>
