--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             border-radius: 3px;
         }
 
-        td:focus {
+        td:active {
             transition: all 0.5s linear;
         }
     </style>
