--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>Colors.</title>
     <style>
         body {
-            background-color: white;
+            background-color: rgb(0, 0, 0);
         }
 
         body div.colors {
-            background-color: rgb(255, 223, 223);
+            background-color: rgb(0, 0, 0);
             display: flex;
             align-items: center;
             justify-content: center;
@@ -25,6 +25,7 @@
             text-align: right;
             font-family: Helvetica;
             width: 80vw;
+            color: white;
         }
 
         p {
@@ -34,7 +35,7 @@
             margin-bottom: 1px;
             font-size: 12px;
             font-family: Helvetica;
-            border-radius: 3px;
+            border-radius: 4px;
         }
 
 
