--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <body>
     <div class="colors">
         <div class="h1">
-            <h1>COLORS.</h1>
+            <h1>いろ<br>COLORS</h1>
         </div>
         <div id="divs">
             <div class="table">
