--- a/index.html
+++ b/index.html
@@ -11,20 +11,24 @@
         }
 
         body div.colors {
+            padding: 1px;
             background-color: rgb(0, 0, 0);
-            display: flex;
+            position: absolute;
+            left: 35%;
+            right: auto;
+            <-- ! display: flex;
             align-items: center;
             justify-content: center;
             height: 100vh;
             flex-direction: column;
-
+            -->
         }
 
         .h1 {
-            font-size: 30px;
+            padding: 0px;
+            font-size: 25px;
             text-align: right;
             font-family: Helvetica;
-            width: 80vw;
             color: white;
         }
 
@@ -36,6 +40,12 @@
             font-size: 12px;
             font-family: Helvetica;
             border-radius: 4px;
+            position: relative;
+            left: auto;
+        }
+
+        div.table {
+            padding: 0px;
         }
 
 
