--- a/index.html
+++ b/index.html
@@ -13,14 +13,10 @@
         body div.colors {
             padding: 1px;
             background-color: rgb(0, 0, 0);
-            position: absolute;
-            left: 35%;
-            <-- ! display: flex;
+            display: flex;
             align-items: center;
             justify-content: center;
-            height: 100vh;
             flex-direction: column;
-            -->
         }
 
         .h1 {
