--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="table">
                 <table>
                     <tr>
-                        <p>Move the mouse over one color, <br>or press it to discover the hiragana!</p>
+                        <p>Move the mouse over one color, <br>or tap it to discover the hiragana!</p>
                     </tr>
                     <tr>
                         <td class="white">WHITE</td>
