--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Colors.</title>
+    <title>いろ · COLORS</title>
     <style>
         body {
             background-color: rgb(0, 0, 0);
