--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>いろ · COLORS</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Pathway+Gothic+One&display=swap');
+
         body {
             background-color: rgb(0, 0, 0);
         }
@@ -28,15 +30,18 @@
         }
 
         p {
-            padding: 3px;
+            padding-top: 6px;
+            padding-bottom: 6px;
             text-align: center;
             background-color: white;
             margin-bottom: 1px;
+            margin-left: 2px;
             font-size: 12px;
             font-family: Helvetica;
             border-radius: 4px;
             position: relative;
             left: auto;
+            width: 310px;
         }
 
         div.table {
@@ -49,9 +54,10 @@
             width: 100px;
             height: 100px;
             text-align: center;
-            font-family: Helvetica;
+            font-family: Helvetica, sans-serif;
             transition: all 0.4s linear;
             border-radius: 4px;
+
         }
 
         td:active {
