--- a/index.html
+++ b/index.html
@@ -4,66 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="./css/styles.css">
     <title>いろ · COLORS</title>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Pathway+Gothic+One&display=swap');
-
-        body {
-            background-color: rgb(0, 0, 0);
-        }
-
-        body div.colors {
-            padding: 1px;
-            background-color: rgb(0, 0, 0);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-direction: column;
-        }
-
-        .h1 {
-            padding: 0px;
-            font-size: 25px;
-            text-align: right;
-            font-family: Helvetica;
-            color: white;
-        }
-
-        p {
-            padding-top: 6px;
-            padding-bottom: 6px;
-            text-align: center;
-            background-color: white;
-            margin-bottom: 1px;
-            margin-left: 2px;
-            font-size: 12px;
-            font-family: Helvetica;
-            border-radius: 4px;
-            position: relative;
-            left: auto;
-            width: 310px;
-        }
-
-        div.table {
-            padding: 0px;
-        }
-
-
-        div.table td {
-            background-color: white;
-            width: 100px;
-            height: 100px;
-            text-align: center;
-            font-family: Helvetica, sans-serif;
-            transition: all 0.4s linear;
-            border-radius: 4px;
-
-        }
-
-        td:active {
-            transition: all 0.4s linear;
-        }
-    </style>
 
 </head>
 
@@ -97,7 +39,7 @@
             </div>
         </div>
     </div>
-    <script type="text/javascript" src="colors.js"></script>
+    <script type="text/javascript" src="js/colors.js"></script>
 </body>
 
 </html>
