--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/fc8b58d044.js" crossorigin="anonymous"></script>
     <title>いろ · COLORS</title>
 
 </head>
@@ -14,7 +15,6 @@
         <div class="h1">
             <h1>いろ<br>COLORS</h1>
         </div>
-        <div id="divs">
             <div class="table">
                 <table>
                     <tr>
@@ -37,7 +37,7 @@
                     </tr>
                 </table>
             </div>
-        </div>
+        <footer>Designed and developed by <a href="https://github.com/julietamullen">Julieta Mulllen <i class="fab fa-github"></i></a><br>Thank you for passing by!</footer>
     </div>
     <script type="text/javascript" src="js/colors.js"></script>
 </body>
