--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     </tr>
                 </table>
             </div>
-        <footer>Designed and developed by <a href="https://github.com/julietamullen">Julieta Mulllen <i class="fab fa-github"></i></a><br>Thank you for passing by!</footer>
+        <footer>Designed and developed by <a href="https://github.com/julietamullen" target="_blank">Julieta Mulllen <i class="fab fa-github"></i></a><br>Thank you for passing by!</footer>
     </div>
     <script type="text/javascript" src="js/colors.js"></script>
 </body>
