--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class="colors">
+    <div class="wrapper">
         <div class="h1">
             <h1>いろ<br>COLORS</h1>
         </div>
